Fix sliding pages on smaller screens (iPhone 5)

--- a/src/components/sliding-page/sliding-page.css
+++ b/src/components/sliding-page/sliding-page.css
@@ -1,4 +1,4 @@
 .sliding-page {
-    width: 100vw;
+    width: 100%;
     flex: 0 0 auto;
 }
